tests/ui/resolve/impl-items-vis-unresolved.stderr
error[E0433]: failed to resolve: there are too many leading `super` keywords
  --> $DIR/impl-items-vis-unresolved.rs:21:13
   |
LL |         pub(super) fn new() {}
   |             ^^^^^ there are too many leading `super` keywords

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0433`.
